# trw-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRAMEWORK.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pyproject.toml  vulture_whitelist.py
.claude/agent-memory/code-simplifier/: MEMORY.md
.claude/agent-memory/trw-tester/: MEMORY.md
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 0178b4244d3a60af  018728a6590727e2  021af956cd100fb6  02f8500c0b066ffe  045ccf380214bd7f  04a373558aa5fdf7  06a2d0a86252c025  06c8a652e538f3bc  08a2fc24705e6370  08de8fa1508fc469  0ae6b0b6ded4247b  0d7c1e23edb37610  0d8c311c98aa1def  10b2b6545e331751  14f7ae07eb22d82d  164d76b7f19bb2b7  16bd4f83b4774dec  18174911634c1508  18c39b874b5f6b1e  18df5f07f9b70db2  18fb0b92908846ac  19d04a83573e3d53  19d4e37396f038b9  1b3606f046acb4a7  1bf8d1266f83d343  1ce53ba08c5de8cc  1cec1f9232d46233  1e5ff9a4a6fe270f  2075c49e9b6d1cd9  22fd2f59113b97fd  2491882198c3e166  26bcfebee8ce3c85  29377af5ccce33be  29d0ef8763fcf06e  2a02117220357147  2a3624aa6f41efb5  2b178ebb2d7a3add  2e20576d6b01cce5  2e68adaa2da973f2  30a229038fcf73fa  (+170 more)
.hypothesis/examples/04e6b3400353b141/: 1174ae5edf651e8d  247faadb274ebecd  e50a348760db5b34
.hypothesis/examples/1174ae5edf651e8d/: 133e2da27c69292c  21a88a877fd0a439  5eb85164c723fc3f  9d459ab18a3a679a  cc85b7eda6188622  ceb2e65d3c6d379f  d4f02cfc37a9df22
.hypothesis/examples/247faadb274ebecd/: 185804c115a392ee
.hypothesis/examples/e50a348760db5b34/: 3c5ba6dcf921e463
.trw/: config.yaml
.trw/context/: analytics-report.yaml  analytics.yaml  ceremony-feedback.yaml  ceremony-overrides.yaml  ceremony-state.json  session-events.jsonl
.trw/findings/: registry.yaml
.trw/learnings/: index.yaml
.trw/learnings/entries/: .publish_hashes.json  2026-02-22-critical-learning.yaml  2026-02-22-critical.yaml  2026-02-22-low-impact.yaml  2026-02-22-new-critical-learning.yaml  2026-02-25-lambda-deploy-50mb-zip-requires-s3-int.yaml  2026-02-25-multi-backend-fan-out-pattern-writes-to.yaml
.trw/learnings/receipts/: recall_log.jsonl
.trw/logs/: ceremony-history.jsonl  llm_usage.jsonl  recall_tracking.jsonl  tool-telemetry.jsonl
.trw/memory/: .migrated
data/: mcp_servers.allowlist.yaml
data/profiles/: aider.yaml  claude-code.yaml  codex.yaml  copilot.yaml  cursor-cli.yaml  cursor-ide.yaml  gemini.yaml  opencode.yaml
docs/requirements-aare-f/: INDEX.md  ROADMAP.md
meta/: tool_call_events.jsonl
scripts/: build_installer.py  install-trw.template.py  install-trw.template.sh  sync-data.sh
src/trw_mcp/: __init__.py  _audit_format.py  _locking.py  _logging.py  audit.py  bootstrap.py  exceptions.py  export.py  framework_deployment.py  framework_integrity.py  release_builder.py  scoring.py  server.py  server_transport.py  startup.py  velocity.py
src/trw_mcp/agents/: __init__.py  tier_resolver.py
src/trw_mcp/api/: __init__.py  scoring.py
src/trw_mcp/bootstrap/: __init__.py  _antigravity_cli.py  _antigravity_distill_channels.py  _artifact_names.py  _claude_code_distill_channels.py  _client_integration_appendix.py  _client_integrations.py  _codex.py  _codex_distill_channels.py  _codex_hooks.py  _codex_normalize.py  _codex_toml.py  _config_templates.py  _copilot.py  _copilot_distill_channels.py  _copilot_models.py  _cursor.py  _cursor_cli.py  _cursor_distill_channels.py  _cursor_hooks_io.py  _cursor_ide.py  _cursor_models.py  _distill_channel_manifest.py  _file_ops.py  _gemini.py  _gemini_distill_channels.py  _gitignore_merge.py  _ide_targets.py  _ide_targets_distill.py  _ide_targets_finalize.py  _init_project.py  _init_project_ide.py  _init_project_skills.py  _mcp_json.py  _opencode.py  _opencode_distill_channels.py  _opencode_instructions.py  _template_claude_md.py  _template_updater.py  _update_project.py  (+6 more)
src/trw_mcp/canons/: __init__.py  _views.py  (+11 more)
tests/: CLAUDE.md  _analytics_branches_support.py  _analytics_yaml_paths_support.py  _auto_upgrade_test_support.py  _bootstrap_test_support.py  _build_edge_paths_support.py  _ceremony_feedback_support.py  _ceremony_helpers.py  _ceremony_helpers_support.py  _ceremony_nudge_support.py  _compat_baseline.md  _compat_baseline.txt  _consolidation_test_helpers.py  _copilot_test_support.py  _core_116_recall_scoring_support.py  _coverage_tools_support.py  _cursor_hook_nudge_gate_support.py  _dedup_test_support.py  _delivery_support.py  _evidence_factories.py  _factories.py  _fix056_status_integrity_support.py  _gemini_test_support.py  _git_commit_workflow_support.py  _install_trw_pip_target_contract_support.py  _installer_process_support.py  _knowledge_topology_edge_support.py  _knowledge_topology_support.py  _learning_helpers_test_support.py  _memory_adapter_branches_support.py  _memory_adapter_edge_support.py  _memory_adapter_support.py  _middleware_test_fakes.py  _mutations_support.py  _orchestration_branches_support.py  _orchestration_waves_support.py  _phase_gates_build_support.py  _phase_gates_support.py  _prd_audit_claudemd_support.py  _recall_integration_support.py  (+1173 more)
tests/channels/: conftest.py  test_channel_lock.py  test_channel_render_tool.py  test_channel_telemetry.py  test_cleanup.py  test_conflict_detection.py  test_contract_parity.py  test_distill_telemetry.py  test_gitignore.py  test_instruction_renderer.py  test_manifest_loader.py  test_manifest_models.py  test_marker_replace.py  test_meta_tune_contract.py  test_provenance.py  test_quota.py  test_state.py  test_tool_return_enrichment_wiring.py  test_ttl.py
tests/ci/: __init__.py  test_emitter_coverage.py
tests/fixtures/: claude_md_baseline.txt  claude_md_baseline.txt.sha256  nudge_pre_PRD_CORE_145.txt  opencode_agents_md_baseline.sha256  sample_sidecar_v0.json
tests/fuzz/: __init__.py
tests/hooks/: test_deliver_gate_fallback.sh  test_plan_gate_prd_score.sh  test_post_tool_event_json_escape.sh  test_session_start_sanitize.sh  test_stop_ceremony_loop_worker_bypass.sh
tests/integration/: test_fabric_user_tier.py  test_h2_integration.py  test_meas_config_resolution.py  test_meas_run_isolation.py  test_scale001_init_wiring.py
(+1112 files in other folders)
