[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trw-mcp"
version = "0.3.0"
description = "Engineering memory layer for AI coding agents — session lifecycle, knowledge persistence, and build verification"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
authors = [
    { name = "TRW Framework", email = "noreply@trwframework.com" },
]
keywords = ["mcp", "claude", "orchestration", "requirements", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruamel.yaml>=0.18.0",
    "structlog>=24.0.0",
    "trw-memory>=0.1.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.0",
]
ai = [
    "anthropic>=0.40.0",
]

[project.scripts]
trw-mcp = "trw_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trw_mcp"]

[tool.pyright]
include = ["src/trw_mcp"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "unit: Fast tests with no filesystem I/O or multi-tool interaction",
    "integration: Tests that write files or call multiple tools together",
    "e2e: End-to-end workflow tests covering full phase sequences",
]

[tool.coverage.run]
source = ["trw_mcp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "def main",
    "if __name__",
]
omit = [
    "src/trw_mcp/server.py",
]
