[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trw-mcp"
version = "0.30.0"
description = "Engineering memory MCP server for Claude Code — patterns, gotchas, and project knowledge that persist across sessions"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.10"
authors = [
    { name = "TRW Framework", email = "noreply@trwframework.com" },
]
keywords = ["mcp", "claude", "agent", "orchestration", "developer-tools", "engineering-memory", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruamel.yaml>=0.18.0",
    "structlog>=24.0.0",
    "trw-memory>=0.1.0",
    "typing_extensions>=4.6.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.0",
    "hypothesis>=6.0.0",
    "sqlite-vec>=0.1.0",
    "rank-bm25>=0.2.0",
    "ruff>=0.15.0",
    "pip-audit>=2.7.0",
    "vulture>=2.11",
    "deptry>=0.21.0",
]
ai = [
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://trwframework.com"
Documentation = "https://trwframework.com/docs"
Repository = "https://github.com/wallter/trw-mcp"
Issues = "https://github.com/wallter/trw-mcp/issues"
Changelog = "https://github.com/wallter/trw-mcp/blob/main/CHANGELOG.md"

[project.scripts]
trw-mcp = "trw_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trw_mcp"]

[tool.pyright]
include = ["src/trw_mcp"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["scripts/install-trw.template.py", "scripts/build_installer.py"]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # Pyflakes: unused imports, undefined names, unused vars
    "I",        # isort: consistent import ordering
    "B",        # flake8-bugbear: B014 duplicate exception, B006 mutable defaults
    "UP",       # pyupgrade: modernize to Python 3.10+ syntax
    "SIM",      # flake8-simplify: nested-if, contextlib.suppress
    "RET",      # flake8-return: assign-then-return, superfluous else
    "PIE",      # flake8-pie: unnecessary pass, duplicate class field
    "TRY",      # tryceratops: verbose raise, raise-in-try
    "ASYNC",    # flake8-async: blocking I/O in async functions
    "PT",       # flake8-pytest-style: fixture/assert/exception style
    "TC",       # flake8-type-checking: move type-only imports to TYPE_CHECKING
    "RUF",      # Ruff-native: mutable ClassVar, unused noqa
    "C4",       # flake8-comprehensions: unnecessary list/dict comprehension
    "PERF",     # performance anti-patterns
    "G",        # flake8-logging-format: logging format strings
    "S",        # bandit: security checks
    "DTZ",      # flake8-datetimez: timezone-aware datetime
    "FURB",     # refurb: modern Python idioms
    "C901",     # McCabe complexity
    "ANN",      # flake8-annotations: type annotations
]
ignore = [
    "E501",     # line too long — handled by line-length setting
    "TRY003",   # long exception messages inline are fine
    "TRY002",   # raising ValueError/TypeError directly is idiomatic
    "TRY300",   # return-in-try is standard handler pattern
    "SIM108",   # ternary not always more readable
    "RET504",   # assign-then-return is often clearer
    "TC001",    # typing imports used at runtime via Pydantic — not type-checking-only
    "TC002",    # third-party imports used at runtime — not type-checking-only
    "TC003",    # stdlib imports used at runtime — not type-checking-only
    "B008",     # function calls in defaults — FastMCP/Pydantic patterns use this idiomatically
    "ISC001",   # conflicts with formatter
    "ANN101",   # deprecated: self type annotation
    "ANN102",   # deprecated: cls type annotation
]
fixable = ["F401", "B007", "B013", "B014", "UP", "I", "PIE790", "TC", "RUF100"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PT", "TRY", "SIM", "B018", "RUF012", "F841", "E741", "B017", "RUF059", "B905", "UP031", "RUF009", "RUF015", "B009", "E402", "ASYNC240", "RET501", "ANN", "S101", "S", "G"]
"tests/test_scoring_properties.py" = ["DTZ001"]  # hypothesis st.datetimes() requires naive bounds when timezones= is provided
"**/__init__.py" = ["F401"]
"**/conftest.py" = ["PT"]
# Structlog processors require Any for logger param (structlog convention)
"src/trw_mcp/_logging.py" = ["ANN401"]
# Build audit imports after logger init (deliberate pattern for module isolation)
"src/trw_mcp/tools/build/_audit.py" = ["E402"]
# Nudge messages imports after logger init (deliberate)
"src/trw_mcp/state/_nudge_messages.py" = ["E402"]
# Bootstrap update uses conditional imports after function-level setup
"src/trw_mcp/bootstrap/_update_project.py" = ["E402", "S110", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["trw_mcp"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = [".hypothesis", "__pycache__", ".git", ".venv", "dist", "build"]
addopts = "--strict-markers --timeout=120 -p no:benchmark"
markers = [
    "unit: Fast tests with no filesystem I/O or multi-tool interaction",
    "integration: Tests that write files or call multiple tools together",
    "e2e: End-to-end workflow tests covering full phase sequences",
    "slow: Tests taking >5s individually (bootstrap, consolidation)",
    "smoke: Minimal sanity check tests",
]
timeout = 120

[tool.coverage.run]
source = ["trw_mcp"]
core = "sysmon"

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "def main",
    "if __name__",
]
omit = [
    "src/trw_mcp/server/__main__.py",
    "src/trw_mcp/server/_proxy.py",
    "src/trw_mcp/server/_transport.py",
]
